@@ -1,9 +1,16 @@
+2013-07-30  Ramon Casero  <rcasero@gmail.com>
+
+	* Delete matlab/test/test_check_sphtrisurf_vertices.m:
+
+	- I had forgotten to delete the test script of function
+	check_sphtrisurf_vertices() that was deleted yesterday.
+
 2013-07-30  Christopher Kelly  <christopher.kelly28@gmail.com>
 
 	* Add common.svnprops
-	
-	- SVN properties file which can be imported in the SVN properties window 
-	when adding MATLAB files to repository. This contains the Rev, Date and 
+
+	- SVN properties file which can be imported in the SVN properties window
+	when adding MATLAB files to repository. This contains the Rev, Date and
 	native properties, and will save us from the pain in the neck that would
 	be having to add them by hand for every new file.
 
